Update existing product

--- a/app/src/main/res/navigation/feature_product_nav_graph.xml
+++ b/app/src/main/res/navigation/feature_product_nav_graph.xml
@@ -16,5 +16,10 @@
     <fragment
         android:id="@+id/addProductFragment"
         android:name="com.iconmobile.sample.feature.products.presentation.products.AddProductFragment"
-        android:label="AddProductFragment" />
+        android:label="AddProductFragment">
+
+        <argument
+            android:name="productId"
+            app:argType="string" />
+    </fragment>
 </navigation>
