--- a/feature_products/src/main/res/layout/fragment_product_item.xml
+++ b/feature_products/src/main/res/layout/fragment_product_item.xml
@@ -87,8 +87,8 @@
 
     <ImageView
         android:id="@+id/deleteIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_margin="@dimen/space_medium"
         android:src="@drawable/ic_delete"
         app:layout_constraintRight_toRightOf="@+id/cardView"
